--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -23,7 +23,7 @@
     font-size: 48px;
     color: #a4e63a;
     line-height: 52px;
-    font-weight: 400;
+    font-weight: 580;
 }
 
 /*  사용자 정보 카드 */
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     background-color: #252525;
-    padding: 20px 40px;
+    padding: 20px 20px;
     border-radius: 10px;
     gap: 26px;
     margin-bottom: 12px;
@@ -48,15 +48,20 @@
     width: 1.2px;
     height: 40px;
     background-color: rgba(255, 255, 255, 0.2);
+
 }
 
 .info {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 8px;
+    flex-grow: 1;
 }
 
 .info-text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: 14px;
     color: white;
 }
@@ -64,4 +69,12 @@
 .highlight {
     color: #a4e63a;
     font-weight: bold;
+    margin-left: 40px;
+}
+
+
+.text {
+    color: #ffffff;
+    font-weight: normal;
+
 }
