--- a/src/styles/NoticeBoard.css
+++ b/src/styles/NoticeBoard.css
@@ -14,8 +14,8 @@
     font-weight: 700;
     color: white;
     font-size: 24px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: -8px;
+    margin-bottom: 25px;
     /* 제목 아래 간격 조정 */
 }
 
